<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
>
    <ImageView
            android:id="@+id/movie_image"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/thumbnail_image"/>
    <TextView
            android:id="@+id/movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@id/movie_image"
            android:text="@string/movie_name"
            android:textSize="18sp"
            android:textStyle="bold"/>
    <TextView
            android:id="@+id/movie_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_name"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/movie_image"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/dummy_text"/>
</RelativeLayout>