<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.made.movietv.ui.activity.DetailMovie">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/thumbnail_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars[1]" />

            <TextView
                android:id="@+id/tv_movie_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/movie_name"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/thumbnail"
                app:layout_constraintStart_toStartOf="@id/thumbnail"
                app:layout_constraintTop_toBottomOf="@id/thumbnail" />

            <LinearLayout
                android:id="@+id/vote"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_shadow_card_detail"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/tv_movie_name"
                app:layout_constraintStart_toStartOf="@id/tv_movie_name"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_name">

                <TextView
                    android:id="@+id/title_user_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/vote_average"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_vote"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/no_string"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@id/title_user_score"
                    app:layout_constraintStart_toStartOf="@id/title_user_score"
                    app:layout_constraintTop_toBottomOf="@+id/title_user_score" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/release"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vote">

                <TextView
                    android:id="@+id/title_lang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/release"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_release"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/no_string"
                    android:textAlignment="center"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/popularity"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/release">

                <TextView
                    android:id="@+id/title_runtime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/popularity"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_popularity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/no_string"
                    android:textAlignment="center"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_shadow_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popularity">

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:textAlignment="center"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/no_string"
                    android:textSize="12sp" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>